--- a/C++ practice/C++ practice/C++ practice.vcxproj.filters
+++ b/C++ practice/C++ practice/C++ practice.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="class\cDijkstra.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="class\cSingleton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -102,6 +105,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="0923 multithreading.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="class\cSingleton.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
