--- a/DX3D/DX3D/DX3D.vcxproj
+++ b/DX3D/DX3D/DX3D.vcxproj
@@ -146,10 +146,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Asciitok.h" />
+    <ClInclude Include="CAllocateHierachy.h" />
     <ClInclude Include="cAseLoader.h" />
     <ClInclude Include="cAseLoader2.h" />
+    <ClInclude Include="cFieldMap.h" />
     <ClInclude Include="cFrame.h" />
     <ClInclude Include="cFrameCounter.h" />
+    <ClInclude Include="CFrustumCube.h" />
     <ClInclude Include="cGroupNode.h" />
     <ClInclude Include="cBody.h" />
     <ClInclude Include="cCamera2.h" />
@@ -178,10 +181,17 @@
     <ClInclude Include="cObjParser.h" />
     <ClInclude Include="cPointLight.h" />
     <ClInclude Include="cPyramid.h" />
+    <ClInclude Include="CHeightMapLoader.h" />
+    <ClInclude Include="CRay.h" />
+    <ClInclude Include="cRayT.h" />
     <ClInclude Include="cRightArm.h" />
     <ClInclude Include="cRightLeg.h" />
+    <ClInclude Include="CSkinnedMesh.h" />
+    <ClInclude Include="cSphere.h" />
     <ClInclude Include="cSpotLight.h" />
     <ClInclude Include="cTextureManager.h" />
+    <ClInclude Include="CObj_X.h" />
+    <ClInclude Include="CTimeManager.h" />
     <ClInclude Include="DX3D.h" />
     <ClInclude Include="iMap.h" />
     <ClInclude Include="Resource.h" />
@@ -189,10 +199,13 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CAllocateHierachy.cpp" />
     <ClCompile Include="cAseLoader.cpp" />
     <ClCompile Include="cAseLoader2.cpp" />
+    <ClCompile Include="cFieldMap.cpp" />
     <ClCompile Include="cFrame.cpp" />
     <ClCompile Include="cFrameCounter.cpp" />
+    <ClCompile Include="CFrustumCube.cpp" />
     <ClCompile Include="cGroupNode.cpp" />
     <ClCompile Include="cBody.cpp" />
     <ClCompile Include="cCamera2.cpp" />
@@ -222,10 +235,17 @@
     <ClCompile Include="cObjParser.cpp" />
     <ClCompile Include="cPointLight.cpp" />
     <ClCompile Include="cPyramid.cpp" />
+    <ClCompile Include="CHeightMapLoader.cpp" />
+    <ClCompile Include="CRay.cpp" />
+    <ClCompile Include="cRayT.cpp" />
     <ClCompile Include="cRightArm.cpp" />
     <ClCompile Include="cRightLeg.cpp" />
+    <ClCompile Include="CSkinnedMesh.cpp" />
+    <ClCompile Include="cSphere.cpp" />
     <ClCompile Include="cSpotLight.cpp" />
     <ClCompile Include="cTextureManager.cpp" />
+    <ClCompile Include="CObj_X.cpp" />
+    <ClCompile Include="CTimeManager.cpp" />
     <ClCompile Include="DX3D.cpp" />
     <ClCompile Include="iMap.cpp" />
     <ClCompile Include="stdafx.cpp">
