--- a/DX3D/DX3D/DX3D.vcxproj.filters
+++ b/DX3D/DX3D/DX3D.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="FrustumCulling">
       <UniqueIdentifier>{05578ac2-5375-4694-abea-82e98572496f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Obilion">
+      <UniqueIdentifier>{d7a9d7eb-8a45-4285-96d2-1068cda013e5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -207,6 +210,18 @@
     <ClInclude Include="CFrustumCube.h">
       <Filter>FrustumCulling</Filter>
     </ClInclude>
+    <ClInclude Include="CFrustum.h">
+      <Filter>FrustumCulling</Filter>
+    </ClInclude>
+    <ClInclude Include="COBB.h">
+      <Filter>Obilion</Filter>
+    </ClInclude>
+    <ClInclude Include="CZealot.h">
+      <Filter>Obilion</Filter>
+    </ClInclude>
+    <ClInclude Include="CSkinnedMeshManager.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -358,6 +373,18 @@
     </ClCompile>
     <ClCompile Include="CFrustumCube.cpp">
       <Filter>FrustumCulling</Filter>
+    </ClCompile>
+    <ClCompile Include="CFrustum.cpp">
+      <Filter>FrustumCulling</Filter>
+    </ClCompile>
+    <ClCompile Include="COBB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CZealot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CSkinnedMeshManager.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
