--- a/DX3D/DX3D/DX3D.vcxproj.filters
+++ b/DX3D/DX3D/DX3D.vcxproj.filters
@@ -237,6 +237,9 @@
     <ClInclude Include="CMainUI.h">
       <Filter>UI</Filter>
     </ClInclude>
+    <ClInclude Include="CUI.h">
+      <Filter>UI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -411,6 +414,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CMainUI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CUI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
