--- a/C++ practice/C++ practice/C++ practice.vcxproj
+++ b/C++ practice/C++ practice/C++ practice.vcxproj
@@ -148,11 +148,15 @@
     <ClInclude Include="class\AVL.h" />
     <ClInclude Include="class\biTree.h" />
     <ClInclude Include="class\cDijkstra.h" />
+    <ClInclude Include="class\ConsolePersonObserver.h" />
     <ClInclude Include="class\GeometricObject\Circle.h" />
     <ClInclude Include="class\GeometricObject\GeometricObject.h" />
     <ClInclude Include="class\GeometricObject\Rectangle.h" />
     <ClInclude Include="class\GeometricObject\Triangle.h" />
     <ClInclude Include="class\List.h" />
+    <ClInclude Include="class\Subject.h" />
+    <ClInclude Include="class\Observer.h" />
+    <ClInclude Include="class\ClockTimer.h" />
     <ClInclude Include="class\stacktp.h" />
     <ClInclude Include="class\Stopwatch.h" />
     <ClInclude Include="class\Student.h" />
@@ -161,7 +165,6 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1015 two dot.cpp" />
     <ClCompile Include="class\AVL.cpp" />
     <ClCompile Include="class\biTree.cpp" />
     <ClCompile Include="class\cDijkstra.cpp" />
@@ -172,6 +175,7 @@
     <ClCompile Include="class\List.cpp" />
     <ClCompile Include="class\Stopwatch.cpp" />
     <ClCompile Include="class\Student.cpp" />
+    <ClCompile Include="fbx test.cpp" />
     <ClCompile Include="FunctionLibrary.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="stdafx.cpp" />
