--- a/test/test/test.vcxproj
+++ b/test/test/test.vcxproj
@@ -145,10 +145,16 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CObservable.h" />
+    <ClInclude Include="CObserver.h" />
+    <ClInclude Include="CSingleton.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CObservable.cpp" />
+    <ClCompile Include="CObserver.cpp" />
+    <ClCompile Include="CSingleton.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
