--- a/test/test/test.vcxproj.filters
+++ b/test/test/test.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="CEventPublisher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CAttackStrategy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CEventPublisher.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CAttackStrategy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
