--- a/test/test/test.vcxproj
+++ b/test/test/test.vcxproj
@@ -150,8 +150,12 @@
     <ClInclude Include="CDayState.h" />
     <ClInclude Include="CEventManager.h" />
     <ClInclude Include="CEventPublisher.h" />
+    <ClInclude Include="CGameStateManager.h" />
+    <ClInclude Include="CLobby.h" />
     <ClInclude Include="CObserver.h" />
     <ClInclude Include="CSingleton.h" />
+    <ClInclude Include="CState.h" />
+    <ClInclude Include="CStrategyCharacter.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -161,8 +165,12 @@
     <ClCompile Include="CDayState.cpp" />
     <ClCompile Include="CEventManager.cpp" />
     <ClCompile Include="CEventPublisher.cpp" />
+    <ClCompile Include="CGameStateManager.cpp" />
+    <ClCompile Include="CLobby.cpp" />
     <ClCompile Include="CObserver.cpp" />
     <ClCompile Include="CSingleton.cpp" />
+    <ClCompile Include="CState.cpp" />
+    <ClCompile Include="CStrategyCharacter.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
