--- a/test/test/test.vcxproj
+++ b/test/test/test.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="CSingleton.h" />
     <ClInclude Include="CState.h" />
     <ClInclude Include="CStrategyCharacter.h" />
+    <ClInclude Include="CTestSingleton.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -171,6 +172,7 @@
     <ClCompile Include="CSingleton.cpp" />
     <ClCompile Include="CState.cpp" />
     <ClCompile Include="CStrategyCharacter.cpp" />
+    <ClCompile Include="CTestSingleton.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
