--- a/test/test/test.vcxproj.filters
+++ b/test/test/test.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="CStrategyCharacter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CTestSingleton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -96,6 +99,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CStrategyCharacter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CTestSingleton.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
