--- a/DirectX11/DX11_VS2019/UnitTest/UnitTest.vcxproj
+++ b/DirectX11/DX11_VS2019/UnitTest/UnitTest.vcxproj
@@ -145,6 +145,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DrawMesh.h" />
     <ClInclude Include="DrawTerrain.h" />
     <ClInclude Include="DrawTexture.h" />
     <ClInclude Include="DrawVertex.h" />
@@ -152,6 +153,7 @@
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DrawMesh.cpp" />
     <ClCompile Include="DrawTerrain.cpp" />
     <ClCompile Include="DrawTexture.cpp" />
     <ClCompile Include="DrawVertex.cpp" />
