--- a/DirectX11/DX11_VS2019/Framework/Framework.vcxproj
+++ b/DirectX11/DX11_VS2019/Framework/Framework.vcxproj
@@ -126,7 +126,9 @@ copy /Y "$(SolutionDir)Debug\Framework.pdb" "$(SolutionDir)UnitTest\</Command>
     </Link>
     <PostBuildEvent>
       <Command>copy /Y "$(SolutionDir)Debug\Framework.lib" "$(SolutionDir)UnitTest\"
-copy /Y "$(SolutionDir)Debug\Framework.pdb" "$(SolutionDir)UnitTest\"</Command>
+copy /Y "$(SolutionDir)Debug\Framework.pdb" "$(SolutionDir)UnitTest\"
+copy /Y "$(SolutionDir)Debug\Framework.lib" "$(SolutionDir)ModelExport\"
+copy /Y "$(SolutionDir)Debug\Framework.pdb" "$(SolutionDir)ModelExport\"</Command>
     </PostBuildEvent>
     <Lib>
       <AdditionalLibraryDirectories>../../_Libraries/;</AdditionalLibraryDirectories>
